--- a/COM3D2.HighHeel/COM3D2.HighHeel.csproj
+++ b/COM3D2.HighHeel/COM3D2.HighHeel.csproj
@@ -10,18 +10,23 @@
     <ItemGroup>
       <Reference Include="0Harmony20">
         <HintPath>F:\COM3D2\BepInEx\core\0Harmony20.dll</HintPath>
+        <Private>false</Private>
       </Reference>
       <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
         <HintPath>..\lib\Assembly-CSharp.dll</HintPath>
+        <Private>false</Private>
       </Reference>
       <Reference Include="BepInEx">
         <HintPath>F:\COM3D2\BepInEx\core\BepInEx.dll</HintPath>
+        <Private>false</Private>
       </Reference>
       <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
         <HintPath>..\lib\Newtonsoft.Json.dll</HintPath>
+        <Private>false</Private>
       </Reference>
       <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
         <HintPath>..\lib\UnityEngine.dll</HintPath>
+        <Private>false</Private>
       </Reference>
     </ItemGroup>
 
