--- a/COM3D2.HighHeel/COM3D2.HighHeel.csproj
+++ b/COM3D2.HighHeel/COM3D2.HighHeel.csproj
@@ -12,25 +12,27 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Reference Include="0Harmony20">
-        <HintPath>F:\COM3D2\BepInEx\core\0Harmony20.dll</HintPath>
-        <Private>false</Private>
+      <Reference Include="0Harmony">
+        <HintPath>..\..\_lib2\0Harmony.dll</HintPath>
       </Reference>
-      <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-        <HintPath>..\lib\Assembly-CSharp.dll</HintPath>
-        <Private>false</Private>
+      <Reference Include="Assembly-CSharp">
+        <HintPath>..\..\_lib2\Assembly-CSharp.dll</HintPath>
+      </Reference>
+      <Reference Include="Assembly-CSharp-firstpass">
+        <HintPath>..\..\_lib2\Assembly-CSharp-firstpass.dll</HintPath>
       </Reference>
       <Reference Include="BepInEx">
-        <HintPath>F:\COM3D2\BepInEx\core\BepInEx.dll</HintPath>
-        <Private>false</Private>
+        <HintPath>..\..\_lib2\BepInEx.dll</HintPath>
+      </Reference>
+      <Reference Include="COM3D2.API">
+        <HintPath>..\..\_lib2\COM3D2.API.dll</HintPath>
       </Reference>
       <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
         <HintPath>..\lib\Newtonsoft.Json.dll</HintPath>
         <Private>false</Private>
       </Reference>
-      <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-        <HintPath>..\lib\UnityEngine.dll</HintPath>
-        <Private>false</Private>
+      <Reference Include="UnityEngine">
+        <HintPath>..\..\_lib2\UnityEngine.dll</HintPath>
       </Reference>
     </ItemGroup>
 
